2009-07-16 Maximilien Cuony
    * FS#331
    * FS#327

2009-07-15 Maximilien Cuony
    * Assistant finalised
    * FS#319
    * FS#326

2009-07-14 Maximilien Cuony
    * Escaping filenames with spaces
    * Translating assistant

2009-07-11 Maximilien Cuony
    * FS#308
    * FS#3
    * Doing some cleaning up in the code, including license..
    * Don't block interface when using keyservers

2009-07-09 Maximilien Cuony
    * Improving gmail detection
    * FS#321
    * FS#304
    * Begining download menu

2009-07-08 Maximilien Cuony
    * Assistant done, except translations {FS#41}

2009-07-04 Maximilien Cuony
    * Removing warning when erasing saved password
    * FS#305
    * FS#314
    * FS#315
    * FS#317
    * Old api disabled
    * FS#318
    * Improved inline size
    * !FS#313
    * Begining the assistant

2009-06-21 Maximilien Cuony
    * 0.7.6 released !
    * Autodecrypting multi inline encrypted mail

2009-06-20 Maximilien Cuony
    * FS#170
    * Cleaning locales : +el vi, -po sv bn nb nb-no sk
    * FS#292
    * FS#297 (http://eprint.iacr.org/2009/259.pdf)

2009-06-18 Maximilien Cuony
    * New website
    * Don't ask twice for download key
    * FS#301
    * FS#302

2009-06-05 Maximilien Cuony
    * FS#284

2009-06-04 Maximilien Cuony
    * FS#294
    * FS#295
    * FS#256
    * FS#257

2009-05-25 Maximilien Cuony
    * FS#253

2009-05-24 Maximilien Cuony
    * FS#271
    * FS#277
    * FS#279
    * FS#270
    * FS#276
    * FS#275
    * FS#252

2009-03-06 Maximilien Cuony
    * 0.7.5 packed, and uploaded to the server !

2009-03-06 Maximilien Cuony
    * Gmail working again

2009-02-15 Maximilien Cuony
    * 0.7.4 packed, and uploaded to the server !
    * Adding Romanian, Esperanto, Slovak locates

2009-02-14 Maximilien Cuony
    * Fixing gmails problem (mails not parsed)
    * Fixing gmails problem (mails sending)
    * FS#241
    * FS#245
    * FS#248 (no more wrap system on webmails)
    * Improving mail detection

2009-02-11 Maximilien Cuony