@@ -1,3 +1,6 @@
+2009-07-18 Maximilien Cuony
+    * Cancel api request when blank password given
+
 2009-07-16 Maximilien Cuony
     * FS#331
     * FS#327
